chore: increase arx-level-generator version and remove unnecessary extra src folder in dist

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "generate": "tsc && tsc-alias && node ./dist/src/index.js",
+    "generate": "tsc && tsc-alias && node ./dist/index.js",
     "rungame": "arx-level-generator --rungame",
     "rungame:noclip": "arx-level-generator --rungame --noclip",
     "dev": "npm run generate && npm run rungame",
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/meszaros-lajos-gyorgy/arx-map-katamari-damacy#readme",
   "dependencies": {
     "arx-convert": "^10.1.1",
-    "arx-level-generator": "^21.0.0-alpha.27",
+    "arx-level-generator": "^21.0.0-alpha.28",
     "three": "^0.167.0"
   },
   "devDependencies": {
