--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/meszaros-lajos-gyorgy/arx-map-katamari-damacy#readme",
   "dependencies": {
-    "arx-convert": "^10.1.1",
-    "arx-level-generator": "^21.0.0-alpha.33",
-    "three": "^0.167.0"
+    "arx-convert": "10.3.2",
+    "arx-level-generator": "^21.0.0-alpha.41",
+    "three": "0.171.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
