--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,7 @@ originalLevelFiles=../pkware-test-files
 # before adding it to the output directory
 # the folder is automatically created when needed
 # default value is "./cache" relative to the project directory
-cacheFolder=./cache
+cacheDir=./cache
 
 # the level files will be generated here
 # set this to your arx fatalis install folder to
@@ -33,9 +33,12 @@ assetsDir=./assets
 calculateLighting=true
 
 # possible modes for lighting calculation:
-# - "Danae"
-# default value is "Danae"
-lightingCalculatorMode=Danae
+# - "MaxBrightness" - sets everyting to the maximum brightness, ignores lights, useful for checking edits to a mesh
+# - "CompleteDarkness" - every polygon of the mesh is as dark as it can be, ignores lights
+# - "Arx" - the default look of Arx using Danae's lighting calculation: shadows are not cast by polygons, everything is lit evenly
+# - "Realistic" - polygons cast shadows if obstructing the lights
+# default value is "Arx"
+lightingCalculatorMode=Arx
 
 # any string that is used to seed the random number generator
 # default value is a random number between 100.000.000 and 999.999.999
@@ -45,7 +48,7 @@ seed=12345
 # the default value is "production"
 mode=production
 
-# Whether to compress the FTS file with pkware after compiling, or keep it uncompressed
+# whether to compress the FTS file with pkware after compiling, or keep it uncompressed
 # can be either "true" or "false"
 # the default value is "false"
 # uncompressed FTS is an Arx Libertatis 1.3+ feature, so it should be disabled when releasing a map
